--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 ## User settings
 xcuserdata/
 
+## DS_Store files
+**/.DS_Store
+
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
 *.xccheckout
